force-app/main/default/objects/Species__c/fields/Care_Notes__c.field-meta.xml
<CustomField>
    <fullName>Care_Notes__c</fullName>
    <label>Care Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>