force-app/main/default/objects/Species__c/fields/Fertilization__c.field-meta.xml
<CustomField>
    <fullName>Fertilization__c</fullName>
    <label>Fertilization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low (cada mes)</fullName>
            </value>
            <value>
                <fullName>Medium (cada 2 semanas)</fullName>
            </value>
            <value>
                <fullName>High (semanal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>