force-app/main/default/objects/Species__c/fields/Locationes__c.field-meta.xml
<CustomField>
    <fullName>Locationes__c</fullName>
    <description>Región y clima ideal para la especie</description>
    <label>Locationes</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tropical (Amazonas, sureste asiático)</fullName>
            </value>
            <value>
                <fullName
        >Tropical de Sabana (África subsahariana, sur de India)</fullName>
                <label
        >Tropical de Sabana (África subsahariana, sur de India)</label>
            </value>
            <value>
                <fullName
        >Subtropical (Sureste de EE. UU., sur de Brasil, este de Asia)</fullName>
                <label
        >Subtropical (Sureste de EE. UU., sur de Brasil, este de Asia)</label>
            </value>
            <value>
                <fullName
        >Mediterráneo (Sur de Europa, California, Chile central)</fullName>
                <label
        >Mediterráneo (Sur de Europa, California, Chile central)</label>
            </value>
            <value>
                <fullName
        >Templado Oceánico (Inglaterra, noroeste de EE. UU., sur de Chile)</fullName>
                <label
        >Templado Oceánico (Inglaterra, noroeste de EE. UU., sur de Chile)</label>
            </value>
            <value>
                <fullName
        >Continental Húmedo (Noreste de EE. UU., Europa del Este, norte de China)</fullName>
                <label
        >Continental Húmedo (Noreste de EE. UU., Europa del Este, norte de China)</label>
            </value>
            <value>
                <fullName>Alta Montaña (Andes, Himalaya, Alpes)</fullName>
            </value>
            <value>
                <fullName>Árido/Desértico (Sáhara, Sonora, Atacama)</fullName>
            </value>
            <value>
                <fullName
        >Semiárido/Estepa (Centro de España, Patagonia, Grandes Llanuras)</fullName>
                <label
        >Semiárido/Estepa (Centro de España, Patagonia, Grandes Llanuras)</label>
            </value>
            <value>
                <fullName
        >Continental Frío/Subártico (Siberia, norte de Canadá, Escandinavia)</fullName>
                <label
        >Continental Frío/Subártico (Siberia, norte de Canadá, Escandinavia)</label>
            </value>
            <value>
                <fullName
        >Húmedo Insular (Hawaii, Islas Canarias, Madeira)</fullName>
                <label>Húmedo Insular (Hawaii, Islas Canarias, Madeira)</label>
            </value>
            <value>
                <fullName
        >Transición (Sur de Brasil, Uruguay, este de Paraguay)</fullName>
                <label
        >Transición (Sur de Brasil, Uruguay, este de Paraguay)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>