force-app/main/default/objects/Species__c/fields/Showing__c.field-meta.xml
<CustomField>
    <fullName>Showing__c</fullName>
    <label>Showing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENE</fullName>
            </value>
            <value>
                <fullName>FEB</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
            <value>
                <fullName>ABR</fullName>
            </value>
            <value>
                <fullName>MAY</fullName>
            </value>
            <value>
                <fullName>JUN</fullName>
            </value>
            <value>
                <fullName>JUL</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>OCT</fullName>
            </value>
            <value>
                <fullName>NOV</fullName>
            </value>
            <value>
                <fullName>DIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>