force-app/main/default/objects/Species__c/fields/Whatering__c.field-meta.xml
<CustomField>
    <fullName>Whatering__c</fullName>
    <label>Watering</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low (1 vez por semana)</fullName>
            </value>
            <value>
                <fullName>Medium (2-3 veces por semana)</fullName>
            </value>
            <value>
                <fullName>High (diario)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>